# gurobi-sphinxtheme

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  gurobi-sphinxtheme.py  gurobi_sphinxtheme.py  pyproject.toml  requirements.txt
gurobi_sphinxtheme/: __init__.py  conf.py
gurobi_sphinxtheme/theme/: page.html  pagebase.html  theme.conf
gurobi_sphinxtheme/theme/sidebar/: brand.html
gurobi_sphinxtheme/theme/static/: custom.css  gurobi.css
source/: conf.py  pyproject.toml
source/_static/: custom.css
